--- a/note/org-publish.html
+++ b/note/org-publish.html
@@ -68,7 +68,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgcb2a0ed">관련된 글들</a></li>
+<li><a href="#org81e04f7">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -85,16 +85,27 @@ org-publish는 <a href="emacs.html">Emacs</a>에서
 상세한 내용<a target="_blank" href="https://seorenn.tistory.com/63">https://seorenn.tistory.com/63</a> 글을 참고하자.
 </p>
 
-<div id="outline-container-orgcb2a0ed" class="outline-2">
-<h2 id="orgcb2a0ed">관련된 글들</h2>
-<div class="outline-text-2" id="text-orgcb2a0ed">
+<div id="outline-container-org81e04f7" class="outline-2">
+<h2 id="org81e04f7">관련된 글들</h2>
+<div class="outline-text-2" id="text-org81e04f7">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/manual/Publishing.html">🌏 org-publish 공식 매뉴얼</a></li>
 </ul>
 </div>
 </div>
 </section>
-<hr/>
+<div class="top-ad">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
