--- a/note/python.html
+++ b/note/python.html
@@ -68,19 +68,19 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org7403f0c">설치</a></li>
-<li><a href="#orga268268">버전 별 정리</a>
+<li><a href="#org4049ccd">설치</a></li>
+<li><a href="#org90eed52">버전 별 정리</a>
 <ul>
-<li><a href="#org0680e36">3.8</a></li>
+<li><a href="#orgf916c3e">3.8</a></li>
 </ul>
 </li>
-<li><a href="#orgc2de90a">메모</a>
+<li><a href="#orgd9cbe65">메모</a>
 <ul>
-<li><a href="#orgc3e28be">List Comprehension</a></li>
-<li><a href="#orgc13be19">파일 혹은 디렉토리(폴더) 관련</a></li>
+<li><a href="#org3590dcf">List Comprehension</a></li>
+<li><a href="#org3cbed5f">파일 혹은 디렉토리(폴더) 관련</a></li>
 </ul>
 </li>
-<li><a href="#org15ee89a">외부 링크</a></li>
+<li><a href="#org9245438">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -92,9 +92,9 @@ gtag('config', 'UA-44534026-1');
 언어라는 점이 가장 큰 특징이다.
 </p>
 
-<div id="outline-container-org7403f0c" class="outline-2">
-<h2 id="org7403f0c">설치</h2>
-<div class="outline-text-2" id="text-org7403f0c">
+<div id="outline-container-org4049ccd" class="outline-2">
+<h2 id="org4049ccd">설치</h2>
+<div class="outline-text-2" id="text-org4049ccd">
 <p>
 <a href="macos.html">macOS</a> 의 경우
 <a href="homebrew.html">Homebrew</a> 를 통해 설치하거나
@@ -114,13 +114,13 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-orga268268" class="outline-2">
-<h2 id="orga268268">버전 별 정리</h2>
-<div class="outline-text-2" id="text-orga268268">
+<div id="outline-container-org90eed52" class="outline-2">
+<h2 id="org90eed52">버전 별 정리</h2>
+<div class="outline-text-2" id="text-org90eed52">
 </div>
-<div id="outline-container-org0680e36" class="outline-3">
-<h3 id="org0680e36">3.8</h3>
-<div class="outline-text-3" id="text-org0680e36">
+<div id="outline-container-orgf916c3e" class="outline-3">
+<h3 id="orgf916c3e">3.8</h3>
+<div class="outline-text-3" id="text-orgf916c3e">
 <dl class="org-dl">
 <dt><code>:=</code> (Walrus) 오페레이터</dt><dd>좁은(?) 지역 변수.
 <a href="swift.html">Swift</a> 의 <code>if let</code> 과 용도가 비슷하다.
@@ -137,25 +137,25 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-orgc2de90a" class="outline-2">
-<h2 id="orgc2de90a">메모</h2>
-<div class="outline-text-2" id="text-orgc2de90a">
+<div id="outline-container-orgd9cbe65" class="outline-2">
+<h2 id="orgd9cbe65">메모</h2>
+<div class="outline-text-2" id="text-orgd9cbe65">
 </div>
-<div id="outline-container-orgc3e28be" class="outline-3">
-<h3 id="orgc3e28be">List Comprehension</h3>
-<div class="outline-text-3" id="text-orgc3e28be">
+<div id="outline-container-org3590dcf" class="outline-3">
+<h3 id="org3590dcf">List Comprehension</h3>
+<div class="outline-text-3" id="text-org3590dcf">
 </div>
 <ul class="org-ul">
-<li><a id="orgeddd447"></a>Map<br />
-<div class="outline-text-4" id="text-orgeddd447">
+<li><a id="orgf9b9f49"></a>Map<br />
+<div class="outline-text-4" id="text-orgf9b9f49">
 <div class="org-src-container">
 <pre class="src src-python">[x * x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist]
 </pre>
 </div>
 </div>
 </li>
-<li><a id="org574bfac"></a>Filter<br />
-<div class="outline-text-4" id="text-org574bfac">
+<li><a id="org007fd45"></a>Filter<br />
+<div class="outline-text-4" id="text-org007fd45">
 <div class="org-src-container">
 <pre class="src src-python">[x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist <span style="color: #51afef;">if</span> iswhat(x)]
 </pre>
@@ -164,13 +164,13 @@ gtag('config', 'UA-44534026-1');
 </li>
 </ul>
 </div>
-<div id="outline-container-orgc13be19" class="outline-3">
-<h3 id="orgc13be19">파일 혹은 디렉토리(폴더) 관련</h3>
-<div class="outline-text-3" id="text-orgc13be19">
+<div id="outline-container-org3cbed5f" class="outline-3">
+<h3 id="org3cbed5f">파일 혹은 디렉토리(폴더) 관련</h3>
+<div class="outline-text-3" id="text-org3cbed5f">
 </div>
 <ul class="org-ul">
-<li><a id="org5f2fe47"></a>경로에서 파일명만 얻기<br />
-<div class="outline-text-4" id="text-org5f2fe47">
+<li><a id="org0440260"></a>경로에서 파일명만 얻기<br />
+<div class="outline-text-4" id="text-org0440260">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.basename(<span style="color: #98be65;">'/foo/bar/test.txt'</span>)
@@ -179,8 +179,8 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </li>
-<li><a id="org3779136"></a>파일명에서 확장자 분리하기<br />
-<div class="outline-text-4" id="text-org3779136">
+<li><a id="orgd19575a"></a>파일명에서 확장자 분리하기<br />
+<div class="outline-text-4" id="text-orgd19575a">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.splitext(<span style="color: #98be65;">'test.txt'</span>)
@@ -194,8 +194,8 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </li>
-<li><a id="org4a927b0"></a>파일 혹은 디렉토리 구분하기<br />
-<div class="outline-text-4" id="text-org4a927b0">
+<li><a id="org9b610ec"></a>파일 혹은 디렉토리 구분하기<br />
+<div class="outline-text-4" id="text-org9b610ec">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.isfile(<span style="color: #98be65;">'/foo/bar/some/file.txt'</span>)
@@ -206,8 +206,8 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </li>
-<li><a id="org9f2c839"></a>디렉토리 안의 파일 목록 얻기<br />
-<div class="outline-text-4" id="text-org9f2c839">
+<li><a id="org287f476"></a>디렉토리 안의 파일 목록 얻기<br />
+<div class="outline-text-4" id="text-org287f476">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.listdir(<span style="color: #98be65;">'.'</span>)
@@ -219,9 +219,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org15ee89a" class="outline-2">
-<h2 id="org15ee89a">외부 링크</h2>
-<div class="outline-text-2" id="text-org15ee89a">
+<div id="outline-container-org9245438" class="outline-2">
+<h2 id="org9245438">외부 링크</h2>
+<div class="outline-text-2" id="text-org9245438">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/76">Python에 F-string 이라는 게 있었다?</a></li>
 <li><a target="_blank" href="https://seorenn.tistory.com/77">Python 3 정적 타이핑 소개 및 소감(?)</a></li>
@@ -239,7 +239,18 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<hr/>
+<div class="top-ad">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
