--- a/note/spacemacs.html
+++ b/note/spacemacs.html
@@ -68,7 +68,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org2066b16">관련된 글들</a></li>
+<li><a href="#orgeca6213">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -90,9 +90,9 @@ gtag('config', 'UA-44534026-1');
 여전히 좋은 설정 패키지라고 생각한다.
 </p>
 
-<div id="outline-container-org2066b16" class="outline-2">
-<h2 id="org2066b16">관련된 글들</h2>
-<div class="outline-text-2" id="text-org2066b16">
+<div id="outline-container-orgeca6213" class="outline-2">
+<h2 id="orgeca6213">관련된 글들</h2>
+<div class="outline-text-2" id="text-orgeca6213">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.spacemacs.org/">스페이맥스 공식 홈페이지</a></li>
 <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏
@@ -127,7 +127,18 @@ The (Subjective) Spacemacs Howto</a>:
 </div>
 </div>
 </div>
-<hr/>
+<div class="top-ad">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
