--- a/index.html
+++ b/index.html
@@ -159,7 +159,18 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </section>
-<hr/>
+<div class="top-ad">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
