--- a/note/homebrew.html
+++ b/note/homebrew.html
@@ -68,22 +68,22 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org3bc877e">기본 사용법</a>
+<li><a href="#org457df6b">기본 사용법</a>
 <ul>
-<li><a href="#org8c8d7cf">패키지 검색</a></li>
-<li><a href="#orgf33cd3d">패키지 정보</a></li>
-<li><a href="#org139b249">패키지 설치</a></li>
-<li><a href="#orga51dba8">만료된 버전 확인</a></li>
-<li><a href="#org08f5822">패키지 업그레이드</a></li>
-<li><a href="#org420a60e">구 버전 삭제하기</a></li>
-<li><a href="#orge9daef3">패키지 삭제(uninstall)</a></li>
-<li><a href="#org6332cc9">의사 양반(?)</a></li>
+<li><a href="#orgbdb3e37">패키지 검색</a></li>
+<li><a href="#org70f8c4a">패키지 정보</a></li>
+<li><a href="#org93e49c6">패키지 설치</a></li>
+<li><a href="#orge44159e">만료된 버전 확인</a></li>
+<li><a href="#org66872ab">패키지 업그레이드</a></li>
+<li><a href="#org03b3bc1">구 버전 삭제하기</a></li>
+<li><a href="#orgf8e90ce">패키지 삭제(uninstall)</a></li>
+<li><a href="#org971bb81">의사 양반(?)</a></li>
 </ul>
 </li>
-<li><a href="#org46fef70">구 버전 패키지 사용하기</a></li>
-<li><a href="#org135111d">다중 버전을 제공하는 패키지의 경우</a></li>
-<li><a href="#orgfe02525">Cask</a></li>
-<li><a href="#orgcee7cfa">외부 링크</a></li>
+<li><a href="#orgc4f1261">구 버전 패키지 사용하기</a></li>
+<li><a href="#org4965601">다중 버전을 제공하는 패키지의 경우</a></li>
+<li><a href="#org8a8f9bb">Cask</a></li>
+<li><a href="#org9793769">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -94,31 +94,31 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 또한 root 사용자가 아니어도 사용할 수도 있도록 구조를 만들어 준다는 점도 특징이다.
 </p>
 
-<div id="outline-container-org3bc877e" class="outline-2">
-<h2 id="org3bc877e">기본 사용법</h2>
-<div class="outline-text-2" id="text-org3bc877e">
+<div id="outline-container-org457df6b" class="outline-2">
+<h2 id="org457df6b">기본 사용법</h2>
+<div class="outline-text-2" id="text-org457df6b">
 </div>
-<div id="outline-container-org8c8d7cf" class="outline-3">
-<h3 id="org8c8d7cf">패키지 검색</h3>
-<div class="outline-text-3" id="text-org8c8d7cf">
+<div id="outline-container-orgbdb3e37" class="outline-3">
+<h3 id="orgbdb3e37">패키지 검색</h3>
+<div class="outline-text-3" id="text-orgbdb3e37">
 <div class="org-src-container">
 <pre class="src src-bash">brew search KEYWORD
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgf33cd3d" class="outline-3">
-<h3 id="orgf33cd3d">패키지 정보</h3>
-<div class="outline-text-3" id="text-orgf33cd3d">
+<div id="outline-container-org70f8c4a" class="outline-3">
+<h3 id="org70f8c4a">패키지 정보</h3>
+<div class="outline-text-3" id="text-org70f8c4a">
 <div class="org-src-container">
 <pre class="src src-bash">brew info PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org139b249" class="outline-3">
-<h3 id="org139b249">패키지 설치</h3>
-<div class="outline-text-3" id="text-org139b249">
+<div id="outline-container-org93e49c6" class="outline-3">
+<h3 id="org93e49c6">패키지 설치</h3>
+<div class="outline-text-3" id="text-org93e49c6">
 <div class="org-src-container">
 <pre class="src src-bash">brew install PACKAGE_NAME
 </pre>
@@ -129,9 +129,9 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 </p>
 </div>
 </div>
-<div id="outline-container-orga51dba8" class="outline-3">
-<h3 id="orga51dba8">만료된 버전 확인</h3>
-<div class="outline-text-3" id="text-orga51dba8">
+<div id="outline-container-orge44159e" class="outline-3">
+<h3 id="orge44159e">만료된 버전 확인</h3>
+<div class="outline-text-3" id="text-orge44159e">
 <p>
 설치된 패키지의 최신 버전이 존재하는지 확인하려면 <code>update</code> 후
 <code>outdated</code> 를 살펴보자.
@@ -143,9 +143,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org08f5822" class="outline-3">
-<h3 id="org08f5822">패키지 업그레이드</h3>
-<div class="outline-text-3" id="text-org08f5822">
+<div id="outline-container-org66872ab" class="outline-3">
+<h3 id="org66872ab">패키지 업그레이드</h3>
+<div class="outline-text-3" id="text-org66872ab">
 <div class="org-src-container">
 <pre class="src src-bash">brew upgrade PACKAGE_NAME
 </pre>
@@ -159,9 +159,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org420a60e" class="outline-3">
-<h3 id="org420a60e">구 버전 삭제하기</h3>
-<div class="outline-text-3" id="text-org420a60e">
+<div id="outline-container-org03b3bc1" class="outline-3">
+<h3 id="org03b3bc1">구 버전 삭제하기</h3>
+<div class="outline-text-3" id="text-org03b3bc1">
 <p>
 패키지를 업그레이드해도 구 버전은 그대로 남아 파일 시스템에 잔존한다.
 이를 청소하기 위해 <code>cleanup</code> 커맨드를 사용할 수 있다.
@@ -175,18 +175,18 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-orge9daef3" class="outline-3">
-<h3 id="orge9daef3">패키지 삭제(uninstall)</h3>
-<div class="outline-text-3" id="text-orge9daef3">
+<div id="outline-container-orgf8e90ce" class="outline-3">
+<h3 id="orgf8e90ce">패키지 삭제(uninstall)</h3>
+<div class="outline-text-3" id="text-orgf8e90ce">
 <div class="org-src-container">
 <pre class="src src-bash">brew uninstall PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org6332cc9" class="outline-3">
-<h3 id="org6332cc9">의사 양반(?)</h3>
-<div class="outline-text-3" id="text-org6332cc9">
+<div id="outline-container-org971bb81" class="outline-3">
+<h3 id="org971bb81">의사 양반(?)</h3>
+<div class="outline-text-3" id="text-org971bb81">
 <div class="org-src-container">
 <pre class="src src-bash">brew doctor
 </pre>
@@ -197,9 +197,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org46fef70" class="outline-2">
-<h2 id="org46fef70">구 버전 패키지 사용하기</h2>
-<div class="outline-text-2" id="text-org46fef70">
+<div id="outline-container-orgc4f1261" class="outline-2">
+<h2 id="orgc4f1261">구 버전 패키지 사용하기</h2>
+<div class="outline-text-2" id="text-orgc4f1261">
 <p>
 만약 <code>upgrade</code> 등으로 최신버전이 설치되었다면
 해당 패키지의 구 버전도 여전히 파일 시스템에 남아있다.
@@ -214,9 +214,9 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org135111d" class="outline-2">
-<h2 id="org135111d">다중 버전을 제공하는 패키지의 경우</h2>
-<div class="outline-text-2" id="text-org135111d">
+<div id="outline-container-org4965601" class="outline-2">
+<h2 id="org4965601">다중 버전을 제공하는 패키지의 경우</h2>
+<div class="outline-text-2" id="text-org4965601">
 <p>
 다중 버전의 패키지가 필요한 경우 우선 지원되는지 부터 확인해봐야 한다.
 예를 들어 node.js 의 경우 LTS 버전이 다양하게 제공되고 있다.
@@ -319,9 +319,9 @@ v10.x.x
 </p>
 </div>
 </div>
-<div id="outline-container-orgfe02525" class="outline-2">
-<h2 id="orgfe02525">Cask</h2>
-<div class="outline-text-2" id="text-orgfe02525">
+<div id="outline-container-org8a8f9bb" class="outline-2">
+<h2 id="org8a8f9bb">Cask</h2>
+<div class="outline-text-2" id="text-org8a8f9bb">
 <p>
 cask는 <a href="macos.html">macOS</a> 응용 소프트웨어나
 다양한 리소스를 설치할 수 있게 도와주는 확장 도구다.
@@ -355,9 +355,9 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </p>
 </div>
 </div>
-<div id="outline-container-orgcee7cfa" class="outline-2">
-<h2 id="orgcee7cfa">외부 링크</h2>
-<div class="outline-text-2" id="text-orgcee7cfa">
+<div id="outline-container-org9793769" class="outline-2">
+<h2 id="org9793769">외부 링크</h2>
+<div class="outline-text-2" id="text-org9793769">
 <ul class="org-ul">
 <li><a target="_blank" href="https://brew.sh">Homebrew 공식 홈페이지</a></li>
 </ul>
@@ -381,7 +381,18 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </div>
 </div>
 </div>
-<hr/>
+<div class="top-ad">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
