--- a/note/magit.html
+++ b/note/magit.html
@@ -68,16 +68,16 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgcba7c35">magit-status</a></li>
-<li><a href="#orge748ad5">Stage</a></li>
-<li><a href="#org2bd5e2a">Commit</a></li>
-<li><a href="#orgec53261">Log</a></li>
-<li><a href="#org9e898b5">Push</a></li>
-<li><a href="#org5a22638">Pull</a></li>
-<li><a href="#org87507d5">Branch</a></li>
-<li><a href="#orgce8db63">Reset or Revert</a></li>
-<li><a href="#orgac19a16">기타</a></li>
-<li><a href="#org36fbeaa">관련된 글들</a></li>
+<li><a href="#orgc595a22">magit-status</a></li>
+<li><a href="#org4a1f88c">Stage</a></li>
+<li><a href="#org90eaeee">Commit</a></li>
+<li><a href="#orgd5ad654">Log</a></li>
+<li><a href="#org746efb5">Push</a></li>
+<li><a href="#org4ff80e3">Pull</a></li>
+<li><a href="#org31be650">Branch</a></li>
+<li><a href="#orgf7cbe82">Reset or Revert</a></li>
+<li><a href="#org9a6e040">기타</a></li>
+<li><a href="#org9cb5a88">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -98,9 +98,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리한다.
 </p>
-<div id="outline-container-orgcba7c35" class="outline-2">
-<h2 id="orgcba7c35">magit-status</h2>
-<div class="outline-text-2" id="text-orgcba7c35">
+<div id="outline-container-orgc595a22" class="outline-2">
+<h2 id="orgc595a22">magit-status</h2>
+<div class="outline-text-2" id="text-orgc595a22">
 <p>
 현재 상태를 표시하는 UI를 띄운다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
@@ -122,9 +122,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orge748ad5" class="outline-2">
-<h2 id="orge748ad5">Stage</h2>
-<div class="outline-text-2" id="text-orge748ad5">
+<div id="outline-container-org4a1f88c" class="outline-2">
+<h2 id="org4a1f88c">Stage</h2>
+<div class="outline-text-2" id="text-org4a1f88c">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -137,9 +137,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org2bd5e2a" class="outline-2">
-<h2 id="org2bd5e2a">Commit</h2>
-<div class="outline-text-2" id="text-org2bd5e2a">
+<div id="outline-container-org90eaeee" class="outline-2">
+<h2 id="org90eaeee">Commit</h2>
+<div class="outline-text-2" id="text-org90eaeee">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -155,9 +155,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgec53261" class="outline-2">
-<h2 id="orgec53261">Log</h2>
-<div class="outline-text-2" id="text-orgec53261">
+<div id="outline-container-orgd5ad654" class="outline-2">
+<h2 id="orgd5ad654">Log</h2>
+<div class="outline-text-2" id="text-orgd5ad654">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -167,25 +167,25 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org9e898b5" class="outline-2">
-<h2 id="org9e898b5">Push</h2>
-<div class="outline-text-2" id="text-org9e898b5">
+<div id="outline-container-org746efb5" class="outline-2">
+<h2 id="org746efb5">Push</h2>
+<div class="outline-text-2" id="text-org746efb5">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org5a22638" class="outline-2">
-<h2 id="org5a22638">Pull</h2>
-<div class="outline-text-2" id="text-org5a22638">
+<div id="outline-container-org4ff80e3" class="outline-2">
+<h2 id="org4ff80e3">Pull</h2>
+<div class="outline-text-2" id="text-org4ff80e3">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org87507d5" class="outline-2">
-<h2 id="org87507d5">Branch</h2>
-<div class="outline-text-2" id="text-org87507d5">
+<div id="outline-container-org31be650" class="outline-2">
+<h2 id="org31be650">Branch</h2>
+<div class="outline-text-2" id="text-org31be650">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -193,26 +193,26 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-orgce8db63" class="outline-2">
-<h2 id="orgce8db63">Reset or Revert</h2>
-<div class="outline-text-2" id="text-orgce8db63">
+<div id="outline-container-orgf7cbe82" class="outline-2">
+<h2 id="orgf7cbe82">Reset or Revert</h2>
+<div class="outline-text-2" id="text-orgf7cbe82">
 <p>
 <code>x</code> :: 변경 사항을 날리고 원래대로(HEAD) 돌린다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgac19a16" class="outline-2">
-<h2 id="orgac19a16">기타</h2>
-<div class="outline-text-2" id="text-orgac19a16">
+<div id="outline-container-org9a6e040" class="outline-2">
+<h2 id="org9a6e040">기타</h2>
+<div class="outline-text-2" id="text-org9a6e040">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면
 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org36fbeaa" class="outline-2">
-<h2 id="org36fbeaa">관련된 글들</h2>
-<div class="outline-text-2" id="text-org36fbeaa">
+<div id="outline-container-org9cb5a88" class="outline-2">
+<h2 id="org9cb5a88">관련된 글들</h2>
+<div class="outline-text-2" id="text-org9cb5a88">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏 Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏 Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
@@ -220,7 +220,18 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </div>
 </div>
 </section>
-<hr/>
+<div class="top-ad">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
