--- a/note/org-spreadsheet.html
+++ b/note/org-spreadsheet.html
@@ -68,7 +68,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org5e8efd3">관련된 글들</a></li>
+<li><a href="#org03fd00e">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -82,9 +82,9 @@ gtag('config', 'UA-44534026-1');
 글을 참고하자.
 </p>
 
-<div id="outline-container-org5e8efd3" class="outline-2">
-<h2 id="org5e8efd3">관련된 글들</h2>
-<div class="outline-text-2" id="text-org5e8efd3">
+<div id="outline-container-org03fd00e" class="outline-2">
+<h2 id="org03fd00e">관련된 글들</h2>
+<div class="outline-text-2" id="text-org03fd00e">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏 Org as a spreadsheet system: a short introduction</a></li>
 </ul>
@@ -101,7 +101,18 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<hr/>
+<div class="top-ad">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
