--- a/note/tmux.html
+++ b/note/tmux.html
@@ -68,20 +68,20 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgcbf6604">사용법</a></li>
-<li><a href="#org59dc0c0">설정 방법</a>
+<li><a href="#orgc519d46">사용법</a></li>
+<li><a href="#org781606f">설정 방법</a>
 <ul>
-<li><a href="#org1da2c87">리더 키(Prefix) 변경하기</a></li>
+<li><a href="#org537ab70">리더 키(Prefix) 변경하기</a></li>
 </ul>
 </li>
-<li><a href="#org4d0e3e3">단축키</a></li>
-<li><a href="#org23ab9b5">기타 팁</a>
+<li><a href="#orga84d06a">단축키</a></li>
+<li><a href="#org5213718">기타 팁</a>
 <ul>
-<li><a href="#org358d408">선택 영역 복사하기</a></li>
-<li><a href="#orga7d496a">종료하지 않고 설정 다시 읽어 들이기</a></li>
+<li><a href="#org20d0727">선택 영역 복사하기</a></li>
+<li><a href="#orgf82f3d8">종료하지 않고 설정 다시 읽어 들이기</a></li>
 </ul>
 </li>
-<li><a href="#orgd2767ca">관련된 글들</a></li>
+<li><a href="#org451889d">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -95,9 +95,9 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 비슷하면서도 원조 격인 <code>screen</code> 이라는 도구에 영향을 많이 받은 것으로 보인다.
 </p>
 
-<div id="outline-container-orgcbf6604" class="outline-2">
-<h2 id="orgcbf6604">사용법</h2>
-<div class="outline-text-2" id="text-orgcbf6604">
+<div id="outline-container-orgc519d46" class="outline-2">
+<h2 id="orgc519d46">사용법</h2>
+<div class="outline-text-2" id="text-orgc519d46">
 <p>
 그냥 실행시키면 실행은 된다.
 </p>
@@ -123,16 +123,16 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 </div>
 </div>
 </div>
-<div id="outline-container-org59dc0c0" class="outline-2">
-<h2 id="org59dc0c0">설정 방법</h2>
-<div class="outline-text-2" id="text-org59dc0c0">
+<div id="outline-container-org781606f" class="outline-2">
+<h2 id="org781606f">설정 방법</h2>
+<div class="outline-text-2" id="text-org781606f">
 <p>
 <code>~/.tmux.conf</code> 파일에 원하는 설정을 기록할 수 있다.
 </p>
 </div>
-<div id="outline-container-org1da2c87" class="outline-3">
-<h3 id="org1da2c87">리더 키(Prefix) 변경하기</h3>
-<div class="outline-text-3" id="text-org1da2c87">
+<div id="outline-container-org537ab70" class="outline-3">
+<h3 id="org537ab70">리더 키(Prefix) 변경하기</h3>
+<div class="outline-text-3" id="text-org537ab70">
 <p>
 기본 리더키는 <code>^b</code> (Ctrl-B)로 설정되어 있다.
 이걸 바꾸려면, 예를 들어 리더 키를 <code>^\</code> 로 바꾸려면
@@ -162,9 +162,9 @@ set-option -g prefix2 C-']'
 </div>
 </div>
 </div>
-<div id="outline-container-org4d0e3e3" class="outline-2">
-<h2 id="org4d0e3e3">단축키</h2>
-<div class="outline-text-2" id="text-org4d0e3e3">
+<div id="outline-container-orga84d06a" class="outline-2">
+<h2 id="orga84d06a">단축키</h2>
+<div class="outline-text-2" id="text-orga84d06a">
 <p>
 아래에 언급하는 모든 단축키는 리더 키(Prefix)를 먼저 누른 후 눌러야 한다.
 참고로 리더 키는 앞서 언급한 대로
@@ -187,13 +187,13 @@ set-option -g prefix2 C-']'
 </dl>
 </div>
 </div>
-<div id="outline-container-org23ab9b5" class="outline-2">
-<h2 id="org23ab9b5">기타 팁</h2>
-<div class="outline-text-2" id="text-org23ab9b5">
+<div id="outline-container-org5213718" class="outline-2">
+<h2 id="org5213718">기타 팁</h2>
+<div class="outline-text-2" id="text-org5213718">
 </div>
-<div id="outline-container-org358d408" class="outline-3">
-<h3 id="org358d408">선택 영역 복사하기</h3>
-<div class="outline-text-3" id="text-org358d408">
+<div id="outline-container-org20d0727" class="outline-3">
+<h3 id="org20d0727">선택 영역 복사하기</h3>
+<div class="outline-text-3" id="text-org20d0727">
 <p>
 마우스로 드래그 해서 <code>^C</code> 혹은 Command-C 를 눌렀는데 복사가 안 된다면
 <code>^W</code> (Ctrl+W)를 눌러보자.
@@ -207,9 +207,9 @@ set-option -g prefix2 C-']'
 </p>
 </div>
 </div>
-<div id="outline-container-orga7d496a" class="outline-3">
-<h3 id="orga7d496a">종료하지 않고 설정 다시 읽어 들이기</h3>
-<div class="outline-text-3" id="text-orga7d496a">
+<div id="outline-container-orgf82f3d8" class="outline-3">
+<h3 id="orgf82f3d8">종료하지 않고 설정 다시 읽어 들이기</h3>
+<div class="outline-text-3" id="text-orgf82f3d8">
 <p>
 tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 리더 키(Prefix)를 누르고 아래 커맨드를 입력해 보자.
@@ -237,9 +237,9 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 </div>
 </div>
 </div>
-<div id="outline-container-orgd2767ca" class="outline-2">
-<h2 id="orgd2767ca">관련된 글들</h2>
-<div class="outline-text-2" id="text-orgd2767ca">
+<div id="outline-container-org451889d" class="outline-2">
+<h2 id="org451889d">관련된 글들</h2>
+<div class="outline-text-2" id="text-org451889d">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/gpakosz/.tmux">🇫🇷 Oh My Tmux! Pretty &amp; versatile tmux configuration</a>:
 잘 만들어진 설정을 공유하고 있으며 그대로 쓰기에도 괜찮고
@@ -258,7 +258,18 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 </div>
 </div>
 </div>
-<hr/>
+<div class="top-ad">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
