update minor changes

--- a/note/afplay.html
+++ b/note/afplay.html
@@ -68,7 +68,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org87118c6">사용법</a></li>
+<li><a href="#org3dd27d9">사용법</a></li>
 </ul>
 </div>
 </div>
@@ -78,9 +78,9 @@ afplay는 Audio File Play의 약자로
 오디오 파일 플레이어 유틸리티다.
 </p>
 
-<div id="outline-container-org87118c6" class="outline-2">
-<h2 id="org87118c6">사용법</h2>
-<div class="outline-text-2" id="text-org87118c6">
+<div id="outline-container-org3dd27d9" class="outline-2">
+<h2 id="org3dd27d9">사용법</h2>
+<div class="outline-text-2" id="text-org3dd27d9">
 <div class="org-src-container">
 <pre class="src src-bash">afplay /foo/bar/audio.mp3
 </pre>
