--- a/note/org-publish.html
+++ b/note/org-publish.html
@@ -6,9 +6,9 @@
 <title>Org Publish - Seorenn</title>
 <meta name="twitter:title" content="Org Publish" />
 <meta name="og:title" content="Org Publish" />
-<meta name="description" content="Org 문서들을 배치로 퍼블리시할 수 있게 해 주는 Org Publish의 설정방법과 사용법을 설명합니다." />
-<meta name="twitter:description" content="Org 문서들을 배치로 퍼블리시할 수 있게 해 주는 Org Publish의 설정방법과 사용법을 설명합니다." />
-<meta name="og:description" content="Org 문서들을 배치로 퍼블리시할 수 있게 해 주는 Org Publish의 설정방법과 사용법을 설명합니다." />
+<meta name="description" content="Org 문서들을 배치로 퍼블리시할 수 있게 해 주는 Org Publish의 설정방법과 사용법" />
+<meta name="twitter:description" content="Org 문서들을 배치로 퍼블리시할 수 있게 해 주는 Org Publish의 설정방법과 사용법" />
+<meta name="og:description" content="Org 문서들을 배치로 퍼블리시할 수 있게 해 주는 Org Publish의 설정방법과 사용법" />
 <link rel="canonical" href="https://seorenn.github.io/note/org-publish.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/org-publish.html" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
@@ -63,12 +63,12 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>Org Publish</h1>
-<div class="title-date">2020년 4월 15일 수정</div>
+<div class="title-date">2020년 4월 17일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org81e04f7">관련된 글들</a></li>
+<li><a href="#orge0a11ea">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -82,14 +82,14 @@ org-publish는 <a href="emacs.html">Emacs</a>에서
 </p>
 
 <p>
-상세한 내용<a target="_blank" href="https://seorenn.tistory.com/63">https://seorenn.tistory.com/63</a> 글을 참고하자.
+상세한 내용은 <a target="_blank" href="https://seorenn.tistory.com/63">🌏Org Publish로 익스포트 자동화하기</a> 글을 참고하자.
 </p>
 
-<div id="outline-container-org81e04f7" class="outline-2">
-<h2 id="org81e04f7">관련된 글들</h2>
-<div class="outline-text-2" id="text-org81e04f7">
+<div id="outline-container-orge0a11ea" class="outline-2">
+<h2 id="orge0a11ea">외부 링크</h2>
+<div class="outline-text-2" id="text-orge0a11ea">
 <ul class="org-ul">
-<li><a target="_blank" href="https://orgmode.org/manual/Publishing.html">🌏 org-publish 공식 매뉴얼</a></li>
+<li><a target="_blank" href="https://orgmode.org/manual/Publishing.html">🌏org-publish 공식 매뉴얼</a></li>
 </ul>
 </div>
 </div>
