--- a/note/org-spreadsheet.html
+++ b/note/org-spreadsheet.html
@@ -6,9 +6,9 @@
 <title>Org 스프레드시트 - Seorenn</title>
 <meta name="twitter:title" content="Org 스프레드시트" />
 <meta name="og:title" content="Org 스프레드시트" />
-<meta name="description" content="Org Mode 문서로 스프레드시트(Spreadsheet)를 만드는 방법에 대한 가이드입니다." />
-<meta name="twitter:description" content="Org Mode 문서로 스프레드시트(Spreadsheet)를 만드는 방법에 대한 가이드입니다." />
-<meta name="og:description" content="Org Mode 문서로 스프레드시트(Spreadsheet)를 만드는 방법에 대한 가이드입니다." />
+<meta name="description" content="Org Mode 문서로 스프레드시트(Spreadsheet)를 만드는 방법에 대한 가이드" />
+<meta name="twitter:description" content="Org Mode 문서로 스프레드시트(Spreadsheet)를 만드는 방법에 대한 가이드" />
+<meta name="og:description" content="Org Mode 문서로 스프레드시트(Spreadsheet)를 만드는 방법에 대한 가이드" />
 <link rel="canonical" href="https://seorenn.github.io/note/org-spreadsheet.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/org-spreadsheet.html" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
@@ -63,12 +63,12 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>Org 스프레드시트</h1>
-<div class="title-date">2020년 4월 15일 수정</div>
+<div class="title-date">2020년 4월 17일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org03fd00e">관련된 글들</a></li>
+<li><a href="#org0c1f155">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -78,15 +78,19 @@ gtag('config', 'UA-44534026-1');
 </p>
 
 <p>
-자세한 내용은 <a target="_blank" href="https://seorenn.tistory.com/70">Org Mode 테이블 스프레드시트</a>
+이 글은 추후 업데이트 될 예정이다.
+</p>
+
+<p>
+궁금하다면 <a target="_blank" href="https://seorenn.tistory.com/70">🌏Org Mode 테이블 스프레드시트</a>
 글을 참고하자.
 </p>
 
-<div id="outline-container-org03fd00e" class="outline-2">
-<h2 id="org03fd00e">관련된 글들</h2>
-<div class="outline-text-2" id="text-org03fd00e">
+<div id="outline-container-org0c1f155" class="outline-2">
+<h2 id="org0c1f155">관련된 글들</h2>
+<div class="outline-text-2" id="text-org0c1f155">
 <ul class="org-ul">
-<li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏 Org as a spreadsheet system: a short introduction</a></li>
+<li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏Org as a spreadsheet system: a short introduction</a></li>
 </ul>
 </div>
 </div>
