--- a/note/spacemacs.html
+++ b/note/spacemacs.html
@@ -63,12 +63,12 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>Spacemacs</h1>
-<div class="title-date">2020년 4월 15일 수정</div>
+<div class="title-date">2020년 4월 17일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgeca6213">관련된 글들</a></li>
+<li><a href="#org4608368">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -90,14 +90,13 @@ gtag('config', 'UA-44534026-1');
 여전히 좋은 설정 패키지라고 생각한다.
 </p>
 
-<div id="outline-container-orgeca6213" class="outline-2">
-<h2 id="orgeca6213">관련된 글들</h2>
-<div class="outline-text-2" id="text-orgeca6213">
+<div id="outline-container-org4608368" class="outline-2">
+<h2 id="org4608368">외부 링크</h2>
+<div class="outline-text-2" id="text-org4608368">
 <ul class="org-ul">
-<li><a target="_blank" href="https://www.spacemacs.org/">스페이맥스 공식 홈페이지</a></li>
-<li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏
-The (Subjective) Spacemacs Howto</a>:
-개인적으로 운영하는 유튜브 채널의 스페이스맥스 플레이리스트다.
+<li><a target="_blank" href="https://www.spacemacs.org/">🌏스페이맥스 공식 홈페이지</a></li>
+<li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏The (Subjective) Spacemacs Howto</a>:
+개인적으로 운영하는 유튜브 채널의 스페이스맥스 플레이 리스트.
 현재 둠으로 잠시 이주한 탓에 업데이트가 안 되고 있기는 하다.</li>
 </ul>
 </div>
