--- a/note/macos.html
+++ b/note/macos.html
@@ -68,9 +68,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org30dab36">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#orgfb1d7a8">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org060132d">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#orgba84966">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orga36dbdb">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org80cc384">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -95,17 +95,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org30dab36" class="outline-2">
-<h2 id="org30dab36">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org30dab36">
+<div id="outline-container-orgba84966" class="outline-2">
+<h2 id="orgba84966">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-orgba84966">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-orgfb1d7a8" class="outline-2">
-<h2 id="orgfb1d7a8">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-orgfb1d7a8">
+<div id="outline-container-orga36dbdb" class="outline-2">
+<h2 id="orga36dbdb">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-orga36dbdb">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -125,9 +125,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org060132d" class="outline-2">
-<h2 id="org060132d">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org060132d">
+<div id="outline-container-org80cc384" class="outline-2">
+<h2 id="org80cc384">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-org80cc384">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
