--- a/note/magit.html
+++ b/note/magit.html
@@ -68,16 +68,16 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc595a22">magit-status</a></li>
-<li><a href="#org4a1f88c">Stage</a></li>
-<li><a href="#org90eaeee">Commit</a></li>
-<li><a href="#orgd5ad654">Log</a></li>
-<li><a href="#org746efb5">Push</a></li>
-<li><a href="#org4ff80e3">Pull</a></li>
-<li><a href="#org31be650">Branch</a></li>
-<li><a href="#orgf7cbe82">Reset or Revert</a></li>
-<li><a href="#org9a6e040">기타</a></li>
-<li><a href="#org9cb5a88">관련된 글들</a></li>
+<li><a href="#orgd547383">magit-status</a></li>
+<li><a href="#org00b9fcd">Stage</a></li>
+<li><a href="#org76ec764">Commit</a></li>
+<li><a href="#org814e2f0">Log</a></li>
+<li><a href="#org744a334">Push</a></li>
+<li><a href="#orga8b67a5">Pull</a></li>
+<li><a href="#orgaa02330">Branch</a></li>
+<li><a href="#org51b54dd">Reset or Revert</a></li>
+<li><a href="#orgac3d76c">기타</a></li>
+<li><a href="#orgf366e7b">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -98,9 +98,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리한다.
 </p>
-<div id="outline-container-orgc595a22" class="outline-2">
-<h2 id="orgc595a22">magit-status</h2>
-<div class="outline-text-2" id="text-orgc595a22">
+<div id="outline-container-orgd547383" class="outline-2">
+<h2 id="orgd547383">magit-status</h2>
+<div class="outline-text-2" id="text-orgd547383">
 <p>
 현재 상태를 표시하는 UI를 띄운다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
@@ -122,9 +122,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org4a1f88c" class="outline-2">
-<h2 id="org4a1f88c">Stage</h2>
-<div class="outline-text-2" id="text-org4a1f88c">
+<div id="outline-container-org00b9fcd" class="outline-2">
+<h2 id="org00b9fcd">Stage</h2>
+<div class="outline-text-2" id="text-org00b9fcd">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -137,9 +137,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org90eaeee" class="outline-2">
-<h2 id="org90eaeee">Commit</h2>
-<div class="outline-text-2" id="text-org90eaeee">
+<div id="outline-container-org76ec764" class="outline-2">
+<h2 id="org76ec764">Commit</h2>
+<div class="outline-text-2" id="text-org76ec764">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -155,9 +155,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgd5ad654" class="outline-2">
-<h2 id="orgd5ad654">Log</h2>
-<div class="outline-text-2" id="text-orgd5ad654">
+<div id="outline-container-org814e2f0" class="outline-2">
+<h2 id="org814e2f0">Log</h2>
+<div class="outline-text-2" id="text-org814e2f0">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -167,25 +167,25 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org746efb5" class="outline-2">
-<h2 id="org746efb5">Push</h2>
-<div class="outline-text-2" id="text-org746efb5">
+<div id="outline-container-org744a334" class="outline-2">
+<h2 id="org744a334">Push</h2>
+<div class="outline-text-2" id="text-org744a334">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org4ff80e3" class="outline-2">
-<h2 id="org4ff80e3">Pull</h2>
-<div class="outline-text-2" id="text-org4ff80e3">
+<div id="outline-container-orga8b67a5" class="outline-2">
+<h2 id="orga8b67a5">Pull</h2>
+<div class="outline-text-2" id="text-orga8b67a5">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org31be650" class="outline-2">
-<h2 id="org31be650">Branch</h2>
-<div class="outline-text-2" id="text-org31be650">
+<div id="outline-container-orgaa02330" class="outline-2">
+<h2 id="orgaa02330">Branch</h2>
+<div class="outline-text-2" id="text-orgaa02330">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -193,29 +193,29 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-orgf7cbe82" class="outline-2">
-<h2 id="orgf7cbe82">Reset or Revert</h2>
-<div class="outline-text-2" id="text-orgf7cbe82">
+<div id="outline-container-org51b54dd" class="outline-2">
+<h2 id="org51b54dd">Reset or Revert</h2>
+<div class="outline-text-2" id="text-org51b54dd">
 <p>
 <code>x</code> :: 변경 사항을 날리고 원래대로(HEAD) 돌린다.
 </p>
 </div>
 </div>
-<div id="outline-container-org9a6e040" class="outline-2">
-<h2 id="org9a6e040">기타</h2>
-<div class="outline-text-2" id="text-org9a6e040">
+<div id="outline-container-orgac3d76c" class="outline-2">
+<h2 id="orgac3d76c">기타</h2>
+<div class="outline-text-2" id="text-orgac3d76c">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면
 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org9cb5a88" class="outline-2">
-<h2 id="org9cb5a88">관련된 글들</h2>
-<div class="outline-text-2" id="text-org9cb5a88">
+<div id="outline-container-orgf366e7b" class="outline-2">
+<h2 id="orgf366e7b">외부 링크</h2>
+<div class="outline-text-2" id="text-orgf366e7b">
 <ul class="org-ul">
-<li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏 Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
-<li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏 Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
+<li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
+<li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
 </ul>
 </div>
 </div>
