--- a/note/python.html
+++ b/note/python.html
@@ -68,19 +68,19 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org4049ccd">설치</a></li>
-<li><a href="#org90eed52">버전 별 정리</a>
+<li><a href="#orga3b57c8">설치</a></li>
+<li><a href="#orgc6adba4">버전 별 정리</a>
 <ul>
-<li><a href="#orgf916c3e">3.8</a></li>
+<li><a href="#orgc063153">3.8</a></li>
 </ul>
 </li>
-<li><a href="#orgd9cbe65">메모</a>
+<li><a href="#org77b34fa">메모</a>
 <ul>
-<li><a href="#org3590dcf">List Comprehension</a></li>
-<li><a href="#org3cbed5f">파일 혹은 디렉토리(폴더) 관련</a></li>
+<li><a href="#org6e00528">List Comprehension</a></li>
+<li><a href="#orgd77cf95">파일 혹은 디렉토리(폴더) 관련</a></li>
 </ul>
 </li>
-<li><a href="#org9245438">외부 링크</a></li>
+<li><a href="#org875d31e">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -92,9 +92,9 @@ gtag('config', 'UA-44534026-1');
 언어라는 점이 가장 큰 특징이다.
 </p>
 
-<div id="outline-container-org4049ccd" class="outline-2">
-<h2 id="org4049ccd">설치</h2>
-<div class="outline-text-2" id="text-org4049ccd">
+<div id="outline-container-orga3b57c8" class="outline-2">
+<h2 id="orga3b57c8">설치</h2>
+<div class="outline-text-2" id="text-orga3b57c8">
 <p>
 <a href="macos.html">macOS</a> 의 경우
 <a href="homebrew.html">Homebrew</a> 를 통해 설치하거나
@@ -114,20 +114,20 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org90eed52" class="outline-2">
-<h2 id="org90eed52">버전 별 정리</h2>
-<div class="outline-text-2" id="text-org90eed52">
+<div id="outline-container-orgc6adba4" class="outline-2">
+<h2 id="orgc6adba4">버전 별 정리</h2>
+<div class="outline-text-2" id="text-orgc6adba4">
 </div>
-<div id="outline-container-orgf916c3e" class="outline-3">
-<h3 id="orgf916c3e">3.8</h3>
-<div class="outline-text-3" id="text-orgf916c3e">
+<div id="outline-container-orgc063153" class="outline-3">
+<h3 id="orgc063153">3.8</h3>
+<div class="outline-text-3" id="text-orgc063153">
 <dl class="org-dl">
 <dt><code>:=</code> (Walrus) 오페레이터</dt><dd>좁은(?) 지역 변수.
 <a href="swift.html">Swift</a> 의 <code>if let</code> 과 용도가 비슷하다.
 조건문 뿐만 아니라 List Comprehension 등에서도 활용이 가능하다.</dd>
 <dt>f-string 추가 표현식</dt><dd><code>f'name={value}'</code> 대신 <code>f'{name</code>}'= 문법을 사용할 수
 있다.
-관련된 내용은 <a target="_blank" href="https://seorenn.tistory.com/76">Python에 F-string 이라는 게 있었다?</a> 글을 참고해보자.</dd>
+관련된 내용은 <a target="_blank" href="https://seorenn.tistory.com/76">🌏Python에 F-string 이라는 게 있었다?</a> 글을 참고해보자.</dd>
 <dt><code>/</code> 오퍼레이터</dt><dd>함수 매개변수 리스트 구분자.
 <code>f(a, b, /, c, d, *, e, f)</code> 매개변수를 나열할 때
 <code>/</code> 앞쪽은 위치로만 표기 가능하며,
@@ -137,25 +137,25 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-orgd9cbe65" class="outline-2">
-<h2 id="orgd9cbe65">메모</h2>
-<div class="outline-text-2" id="text-orgd9cbe65">
+<div id="outline-container-org77b34fa" class="outline-2">
+<h2 id="org77b34fa">메모</h2>
+<div class="outline-text-2" id="text-org77b34fa">
 </div>
-<div id="outline-container-org3590dcf" class="outline-3">
-<h3 id="org3590dcf">List Comprehension</h3>
-<div class="outline-text-3" id="text-org3590dcf">
+<div id="outline-container-org6e00528" class="outline-3">
+<h3 id="org6e00528">List Comprehension</h3>
+<div class="outline-text-3" id="text-org6e00528">
 </div>
 <ul class="org-ul">
-<li><a id="orgf9b9f49"></a>Map<br />
-<div class="outline-text-4" id="text-orgf9b9f49">
+<li><a id="orgd9eb70d"></a>Map<br />
+<div class="outline-text-4" id="text-orgd9eb70d">
 <div class="org-src-container">
 <pre class="src src-python">[x * x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist]
 </pre>
 </div>
 </div>
 </li>
-<li><a id="org007fd45"></a>Filter<br />
-<div class="outline-text-4" id="text-org007fd45">
+<li><a id="org7ef9e4b"></a>Filter<br />
+<div class="outline-text-4" id="text-org7ef9e4b">
 <div class="org-src-container">
 <pre class="src src-python">[x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist <span style="color: #51afef;">if</span> iswhat(x)]
 </pre>
@@ -164,13 +164,13 @@ gtag('config', 'UA-44534026-1');
 </li>
 </ul>
 </div>
-<div id="outline-container-org3cbed5f" class="outline-3">
-<h3 id="org3cbed5f">파일 혹은 디렉토리(폴더) 관련</h3>
-<div class="outline-text-3" id="text-org3cbed5f">
+<div id="outline-container-orgd77cf95" class="outline-3">
+<h3 id="orgd77cf95">파일 혹은 디렉토리(폴더) 관련</h3>
+<div class="outline-text-3" id="text-orgd77cf95">
 </div>
 <ul class="org-ul">
-<li><a id="org0440260"></a>경로에서 파일명만 얻기<br />
-<div class="outline-text-4" id="text-org0440260">
+<li><a id="org0c8d8dc"></a>경로에서 파일명만 얻기<br />
+<div class="outline-text-4" id="text-org0c8d8dc">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.basename(<span style="color: #98be65;">'/foo/bar/test.txt'</span>)
@@ -179,8 +179,8 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </li>
-<li><a id="orgd19575a"></a>파일명에서 확장자 분리하기<br />
-<div class="outline-text-4" id="text-orgd19575a">
+<li><a id="org6ac0668"></a>파일명에서 확장자 분리하기<br />
+<div class="outline-text-4" id="text-org6ac0668">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.splitext(<span style="color: #98be65;">'test.txt'</span>)
@@ -194,8 +194,8 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </li>
-<li><a id="org9b610ec"></a>파일 혹은 디렉토리 구분하기<br />
-<div class="outline-text-4" id="text-org9b610ec">
+<li><a id="orga184a7a"></a>파일 혹은 디렉토리 구분하기<br />
+<div class="outline-text-4" id="text-orga184a7a">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.isfile(<span style="color: #98be65;">'/foo/bar/some/file.txt'</span>)
@@ -206,8 +206,8 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </li>
-<li><a id="org287f476"></a>디렉토리 안의 파일 목록 얻기<br />
-<div class="outline-text-4" id="text-org287f476">
+<li><a id="org7d93db7"></a>디렉토리 안의 파일 목록 얻기<br />
+<div class="outline-text-4" id="text-org7d93db7">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.listdir(<span style="color: #98be65;">'.'</span>)
@@ -219,12 +219,12 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org9245438" class="outline-2">
-<h2 id="org9245438">외부 링크</h2>
-<div class="outline-text-2" id="text-org9245438">
+<div id="outline-container-org875d31e" class="outline-2">
+<h2 id="org875d31e">외부 링크</h2>
+<div class="outline-text-2" id="text-org875d31e">
 <ul class="org-ul">
-<li><a target="_blank" href="https://seorenn.tistory.com/76">Python에 F-string 이라는 게 있었다?</a></li>
-<li><a target="_blank" href="https://seorenn.tistory.com/77">Python 3 정적 타이핑 소개 및 소감(?)</a></li>
+<li><a target="_blank" href="https://seorenn.tistory.com/76">🌏Python에 F-string 이라는 게 있었다?</a></li>
+<li><a target="_blank" href="https://seorenn.tistory.com/77">🌏Python 3 정적 타이핑 소개 및 소감(?)</a></li>
 </ul>
 </div>
 </div>
