--- a/note/sh.html
+++ b/note/sh.html
@@ -68,27 +68,27 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgecb41c5">소개</a></li>
-<li><a href="#orgeedd937">스크립팅 노트</a>
+<li><a href="#org6c2da97">소개</a></li>
+<li><a href="#org87f1d77">스크립팅 노트</a>
 <ul>
-<li><a href="#org44cb17d">실행 가능한 스크립트</a></li>
-<li><a href="#org6a93057">if</a></li>
-<li><a href="#orgadbd3dd">루프</a></li>
-<li><a href="#org879d4d9">조건식 오퍼레이터</a></li>
-<li><a href="#orgaec4545">디렉토리 존재 유무 체크</a></li>
-<li><a href="#org905e13b">파일 개수</a></li>
-<li><a href="#org2b6fc96">와일드카드 인자 처리</a></li>
-<li><a href="#org3220cdc">에러가 나면 멈추게 하기</a></li>
-<li><a href="#orgb7ecdf0">에러 메시지 숨기기</a></li>
+<li><a href="#org652375f">실행 가능한 스크립트</a></li>
+<li><a href="#orge7c4fb5">if</a></li>
+<li><a href="#orgcc274bb">루프</a></li>
+<li><a href="#org0d7b9b5">조건식 오퍼레이터</a></li>
+<li><a href="#org77fd556">디렉토리 존재 유무 체크</a></li>
+<li><a href="#org1aa72c2">파일 개수</a></li>
+<li><a href="#orgd1245c5">와일드카드 인자 처리</a></li>
+<li><a href="#org6d0a343">에러가 나면 멈추게 하기</a></li>
+<li><a href="#org28ad5ce">에러 메시지 숨기기</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgecb41c5" class="outline-2">
-<h2 id="orgecb41c5">소개</h2>
-<div class="outline-text-2" id="text-orgecb41c5">
+<div id="outline-container-org6c2da97" class="outline-2">
+<h2 id="org6c2da97">소개</h2>
+<div class="outline-text-2" id="text-org6c2da97">
 <p>
 <code>sh</code> 는 Bourne Shell의 축약된 이름으로
 유닉스에서 가장 기본적으로 쓰이던 <a href="shell.html">셸</a> 이다.
@@ -97,16 +97,16 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orgeedd937" class="outline-2">
-<h2 id="orgeedd937">스크립팅 노트</h2>
-<div class="outline-text-2" id="text-orgeedd937">
+<div id="outline-container-org87f1d77" class="outline-2">
+<h2 id="org87f1d77">스크립팅 노트</h2>
+<div class="outline-text-2" id="text-org87f1d77">
 <p>
 전반적인 기준 없이 그냥 메모 단위로 기록되는 팁이다.
 </p>
 </div>
-<div id="outline-container-org44cb17d" class="outline-3">
-<h3 id="org44cb17d">실행 가능한 스크립트</h3>
-<div class="outline-text-3" id="text-org44cb17d">
+<div id="outline-container-org652375f" class="outline-3">
+<h3 id="org652375f">실행 가능한 스크립트</h3>
+<div class="outline-text-3" id="text-org652375f">
 <p>
 일반적으로 셸 스크립트를 만들면 셸을 통해서 실행하는 것이 보통이다.
 </p>
@@ -167,9 +167,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org6a93057" class="outline-3">
-<h3 id="org6a93057">if</h3>
-<div class="outline-text-3" id="text-org6a93057">
+<div id="outline-container-orge7c4fb5" class="outline-3">
+<h3 id="orge7c4fb5">if</h3>
+<div class="outline-text-3" id="text-orge7c4fb5">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #51afef;">if</span> <span style="color: #51afef;">[</span> condition <span style="color: #51afef;">]</span>
 <span style="color: #51afef;">then</span>
@@ -208,9 +208,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgadbd3dd" class="outline-3">
-<h3 id="orgadbd3dd">루프</h3>
-<div class="outline-text-3" id="text-orgadbd3dd">
+<div id="outline-container-orgcc274bb" class="outline-3">
+<h3 id="orgcc274bb">루프</h3>
+<div class="outline-text-3" id="text-orgcc274bb">
 <p>
 <code>for</code> 문을 이용한 현대적인(?) 루프는 아래처럼 쓸 수 있다.
 </p>
@@ -227,9 +227,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org879d4d9" class="outline-3">
-<h3 id="org879d4d9">조건식 오퍼레이터</h3>
-<div class="outline-text-3" id="text-org879d4d9">
+<div id="outline-container-org0d7b9b5" class="outline-3">
+<h3 id="org0d7b9b5">조건식 오퍼레이터</h3>
+<div class="outline-text-3" id="text-org0d7b9b5">
 <ul class="org-ul">
 <li><code>=</code>, <code>!=</code> 문자열이 동일한지, 동일하지 않은지</li>
 <li><code>-eq</code>, <code>-ne</code>, <code>-gt</code>, <code>-ge</code>, <code>-lt</code>, <code>-le</code> 차례대로 equal, not equal, greater
@@ -244,9 +244,9 @@ than, greater than or equal, less than, less than or equal</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgaec4545" class="outline-3">
-<h3 id="orgaec4545">디렉토리 존재 유무 체크</h3>
-<div class="outline-text-3" id="text-orgaec4545">
+<div id="outline-container-org77fd556" class="outline-3">
+<h3 id="org77fd556">디렉토리 존재 유무 체크</h3>
+<div class="outline-text-3" id="text-org77fd556">
 <p>
 위에서도 정리했지만 <code>-d</code> 플래그를 쓸 수 있다.
 </p>
@@ -261,9 +261,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org905e13b" class="outline-3">
-<h3 id="org905e13b">파일 개수</h3>
-<div class="outline-text-3" id="text-org905e13b">
+<div id="outline-container-org1aa72c2" class="outline-3">
+<h3 id="org1aa72c2">파일 개수</h3>
+<div class="outline-text-3" id="text-org1aa72c2">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #dcaeea;">COUNT</span>=$<span style="color: #51afef;">(</span><span style="color: #ECBE7B;">ls</span> /foo/bar | wc -l<span style="color: #51afef;">)</span>
 </pre>
@@ -287,9 +287,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org2b6fc96" class="outline-3">
-<h3 id="org2b6fc96">와일드카드 인자 처리</h3>
-<div class="outline-text-3" id="text-org2b6fc96">
+<div id="outline-container-orgd1245c5" class="outline-3">
+<h3 id="orgd1245c5">와일드카드 인자 처리</h3>
+<div class="outline-text-3" id="text-orgd1245c5">
 <p>
 셸 스크립트에 <code>*.ext</code> 같은 파일 이름 와일드카드를 넘겼을 때
 이를 나열하는 방법을 for 커맨드로 표현하면 이렇다.
@@ -307,9 +307,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org3220cdc" class="outline-3">
-<h3 id="org3220cdc">에러가 나면 멈추게 하기</h3>
-<div class="outline-text-3" id="text-org3220cdc">
+<div id="outline-container-org6d0a343" class="outline-3">
+<h3 id="org6d0a343">에러가 나면 멈추게 하기</h3>
+<div class="outline-text-3" id="text-org6d0a343">
 <p>
 셸 스크립트 상단에 아래 한 줄을 넣어두면 에러가 났을 때 스크립트가 멈춘다.
 </p>
@@ -319,9 +319,9 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 </div>
-<div id="outline-container-orgb7ecdf0" class="outline-3">
-<h3 id="orgb7ecdf0">에러 메시지 숨기기</h3>
-<div class="outline-text-3" id="text-orgb7ecdf0">
+<div id="outline-container-org28ad5ce" class="outline-3">
+<h3 id="org28ad5ce">에러 메시지 숨기기</h3>
+<div class="outline-text-3" id="text-org28ad5ce">
 <p>
 에러 메시지는 <code>stderr</code> (2) 파이프로 전달되니 이것을 지옥의 쓰레기통(?)에 던지면 된다.
 </p>
