update several pages

--- a/note/org-spreadsheet.html
+++ b/note/org-spreadsheet.html
@@ -63,12 +63,12 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>Org 스프레드시트</h1>
-<div class="title-date">2020년 4월 17일 수정</div>
+<div class="title-date">2020년 4월 18일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org0c1f155">관련된 글들</a></li>
+<li><a href="#org541086c">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -86,9 +86,9 @@ gtag('config', 'UA-44534026-1');
 글을 참고하자.
 </p>
 
-<div id="outline-container-org0c1f155" class="outline-2">
-<h2 id="org0c1f155">관련된 글들</h2>
-<div class="outline-text-2" id="text-org0c1f155">
+<div id="outline-container-org541086c" class="outline-2">
+<h2 id="org541086c">외부 링크</h2>
+<div class="outline-text-2" id="text-org541086c">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏Org as a spreadsheet system: a short introduction</a></li>
 </ul>
