--- a/index.html
+++ b/index.html
@@ -89,6 +89,27 @@ gtag('config', 'UA-44534026-1');
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/poetry.html">Poetry</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/flake8.html">flake8</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/org-spreadsheet.html">Org 스프레드시트</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
 <div class="article-link-date">
 2020년 4월 17일 수정</div>
@@ -104,13 +125,6 @@ gtag('config', 'UA-44534026-1');
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-publish.html">Org Publish</a></h2>
-<div class="article-link-date">
-2020년 4월 17일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-spreadsheet.html">Org 스프레드시트</a></h2>
 <div class="article-link-date">
 2020년 4월 17일 수정</div>
 </div>
@@ -141,20 +155,6 @@ gtag('config', 'UA-44534026-1');
 <h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
 <div class="article-link-date">
 2020년 4월 17일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/homebrew.html">Homebrew</a></h2>
-<div class="article-link-date">
-2020년 4월 17일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
-<div class="article-link-date">
-2020년 4월 16일 수정</div>
 </div>
 </div>
 </div>
