--- a/note/index.html
+++ b/note/index.html
@@ -63,6 +63,27 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/poetry.html">Poetry</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/flake8.html">flake8</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/org-spreadsheet.html">Org 스프레드시트</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
 <div class="article-link-date">
 2020년 4월 17일 수정</div>
@@ -78,13 +99,6 @@ gtag('config', 'UA-44534026-1');
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-publish.html">Org Publish</a></h2>
-<div class="article-link-date">
-2020년 4월 17일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-spreadsheet.html">Org 스프레드시트</a></h2>
 <div class="article-link-date">
 2020년 4월 17일 수정</div>
 </div>
