--- a/note/python.html
+++ b/note/python.html
@@ -68,19 +68,19 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga3b57c8">설치</a></li>
-<li><a href="#orgc6adba4">버전 별 정리</a>
+<li><a href="#org0800bfb">설치</a></li>
+<li><a href="#org95cf927">버전 별 정리</a>
 <ul>
-<li><a href="#orgc063153">3.8</a></li>
+<li><a href="#orgbdf0192">3.8</a></li>
 </ul>
 </li>
-<li><a href="#org77b34fa">메모</a>
+<li><a href="#orgfa28b24">메모</a>
 <ul>
-<li><a href="#org6e00528">List Comprehension</a></li>
-<li><a href="#orgd77cf95">파일 혹은 디렉토리(폴더) 관련</a></li>
+<li><a href="#orgf6eb9f6">List Comprehension</a></li>
+<li><a href="#org1c14e2f">파일 혹은 디렉토리(폴더) 관련</a></li>
 </ul>
 </li>
-<li><a href="#org875d31e">외부 링크</a></li>
+<li><a href="#orga96df50">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -92,9 +92,9 @@ gtag('config', 'UA-44534026-1');
 언어라는 점이 가장 큰 특징이다.
 </p>
 
-<div id="outline-container-orga3b57c8" class="outline-2">
-<h2 id="orga3b57c8">설치</h2>
-<div class="outline-text-2" id="text-orga3b57c8">
+<div id="outline-container-org0800bfb" class="outline-2">
+<h2 id="org0800bfb">설치</h2>
+<div class="outline-text-2" id="text-org0800bfb">
 <p>
 <a href="macos.html">macOS</a> 의 경우
 <a href="homebrew.html">Homebrew</a> 를 통해 설치하거나
@@ -114,13 +114,13 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-orgc6adba4" class="outline-2">
-<h2 id="orgc6adba4">버전 별 정리</h2>
-<div class="outline-text-2" id="text-orgc6adba4">
+<div id="outline-container-org95cf927" class="outline-2">
+<h2 id="org95cf927">버전 별 정리</h2>
+<div class="outline-text-2" id="text-org95cf927">
 </div>
-<div id="outline-container-orgc063153" class="outline-3">
-<h3 id="orgc063153">3.8</h3>
-<div class="outline-text-3" id="text-orgc063153">
+<div id="outline-container-orgbdf0192" class="outline-3">
+<h3 id="orgbdf0192">3.8</h3>
+<div class="outline-text-3" id="text-orgbdf0192">
 <dl class="org-dl">
 <dt><code>:=</code> (Walrus) 오페레이터</dt><dd>좁은(?) 지역 변수.
 <a href="swift.html">Swift</a> 의 <code>if let</code> 과 용도가 비슷하다.
@@ -137,25 +137,25 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org77b34fa" class="outline-2">
-<h2 id="org77b34fa">메모</h2>
-<div class="outline-text-2" id="text-org77b34fa">
+<div id="outline-container-orgfa28b24" class="outline-2">
+<h2 id="orgfa28b24">메모</h2>
+<div class="outline-text-2" id="text-orgfa28b24">
 </div>
-<div id="outline-container-org6e00528" class="outline-3">
-<h3 id="org6e00528">List Comprehension</h3>
-<div class="outline-text-3" id="text-org6e00528">
+<div id="outline-container-orgf6eb9f6" class="outline-3">
+<h3 id="orgf6eb9f6">List Comprehension</h3>
+<div class="outline-text-3" id="text-orgf6eb9f6">
 </div>
 <ul class="org-ul">
-<li><a id="orgd9eb70d"></a>Map<br />
-<div class="outline-text-4" id="text-orgd9eb70d">
+<li><a id="org9a6f221"></a>Map<br />
+<div class="outline-text-4" id="text-org9a6f221">
 <div class="org-src-container">
 <pre class="src src-python">[x * x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist]
 </pre>
 </div>
 </div>
 </li>
-<li><a id="org7ef9e4b"></a>Filter<br />
-<div class="outline-text-4" id="text-org7ef9e4b">
+<li><a id="org5d08c80"></a>Filter<br />
+<div class="outline-text-4" id="text-org5d08c80">
 <div class="org-src-container">
 <pre class="src src-python">[x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist <span style="color: #51afef;">if</span> iswhat(x)]
 </pre>
@@ -164,13 +164,13 @@ gtag('config', 'UA-44534026-1');
 </li>
 </ul>
 </div>
-<div id="outline-container-orgd77cf95" class="outline-3">
-<h3 id="orgd77cf95">파일 혹은 디렉토리(폴더) 관련</h3>
-<div class="outline-text-3" id="text-orgd77cf95">
+<div id="outline-container-org1c14e2f" class="outline-3">
+<h3 id="org1c14e2f">파일 혹은 디렉토리(폴더) 관련</h3>
+<div class="outline-text-3" id="text-org1c14e2f">
 </div>
 <ul class="org-ul">
-<li><a id="org0c8d8dc"></a>경로에서 파일명만 얻기<br />
-<div class="outline-text-4" id="text-org0c8d8dc">
+<li><a id="orgb335080"></a>경로에서 파일명만 얻기<br />
+<div class="outline-text-4" id="text-orgb335080">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.basename(<span style="color: #98be65;">'/foo/bar/test.txt'</span>)
@@ -179,8 +179,8 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </li>
-<li><a id="org6ac0668"></a>파일명에서 확장자 분리하기<br />
-<div class="outline-text-4" id="text-org6ac0668">
+<li><a id="orgffac065"></a>파일명에서 확장자 분리하기<br />
+<div class="outline-text-4" id="text-orgffac065">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.splitext(<span style="color: #98be65;">'test.txt'</span>)
@@ -194,8 +194,8 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </li>
-<li><a id="orga184a7a"></a>파일 혹은 디렉토리 구분하기<br />
-<div class="outline-text-4" id="text-orga184a7a">
+<li><a id="orgd0cf7af"></a>파일 혹은 디렉토리 구분하기<br />
+<div class="outline-text-4" id="text-orgd0cf7af">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.isfile(<span style="color: #98be65;">'/foo/bar/some/file.txt'</span>)
@@ -206,8 +206,8 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </li>
-<li><a id="org7d93db7"></a>디렉토리 안의 파일 목록 얻기<br />
-<div class="outline-text-4" id="text-org7d93db7">
+<li><a id="org67f5a67"></a>디렉토리 안의 파일 목록 얻기<br />
+<div class="outline-text-4" id="text-org67f5a67">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.listdir(<span style="color: #98be65;">'.'</span>)
@@ -219,9 +219,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org875d31e" class="outline-2">
-<h2 id="org875d31e">외부 링크</h2>
-<div class="outline-text-2" id="text-org875d31e">
+<div id="outline-container-orga96df50" class="outline-2">
+<h2 id="orga96df50">외부 링크</h2>
+<div class="outline-text-2" id="text-orga96df50">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/76">🌏Python에 F-string 이라는 게 있었다?</a></li>
 <li><a target="_blank" href="https://seorenn.tistory.com/77">🌏Python 3 정적 타이핑 소개 및 소감(?)</a></li>
@@ -231,6 +231,13 @@ gtag('config', 'UA-44534026-1');
 </section>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/flake8.html">flake8</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
